button styling fixed-stretch goals completed

--- a/less/index.less
+++ b/less/index.less
@@ -126,8 +126,24 @@ p {
 			p {
 				line-height: 19px;
 			}
-		}
+	
+		button {
+				width: 45%;
+				height: 40px;
+				margin-top: 20px;
+				font-size: 1rem;
+				font-weight: 600;
+				color: white;
+				border: 1px solid white;
+				background-color: @blue;
+				cursor: pointer;
+				transition: 0.3s;
+				.border-radius;
 
+				&:hover {
+					background-color: @darkblue;
+				}
+			}}
 		
 
 		.topRight {
